name:                pcapKospi200
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/iprokin/pcapKospi200
license:             BSD3
license-file:        LICENSE
author:              Ilya Prokin
maintainer:          isprokin@gmail.com
copyright:           2017 Ilya Prokin
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable pcapKospi200
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, binary == 0.8.3.0, bytestring == 0.10.8.1, time == 1.6.0.1
--  ghc-options:         -O2
